force-app/main/default/objects/Employment_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <defaultValue>&quot;YYYY/YY&quot;</defaultValue>
        <label>Academic Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Clause_s__c</fullName>
        <label>Additional Clause(s)*</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approvals__c</fullName>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Copy_Student_Numebers_Confirmed__c</fullName>
        <formula>Target_Students_This_Year__r.Confirmed_Student_Numbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Copy Student Numebers Confirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Criteria__c</fullName>
        <label>Bonus Criteria*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student Numbers</fullName>
                </value>
                <value>
                    <fullName>Student Numbers and Personal Objectives</fullName>
                </value>
                <value>
                    <fullName>Personal Objectives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Gross_Net__c</fullName>
        <formula>IF(INCLUDES(Net_Components__c, &quot;Performance Bonus&quot;), &quot;Net&quot;, &quot;Gross&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Gross/Net</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Letter_Calc_3__c</fullName>
        <formula>&quot;Base Bonus Amount (&quot;&amp; Copy_Bonus_Seperator__c  &amp;&quot; &quot;&amp; Performance_Bonus_Currency__c &amp;&quot;)&quot;&amp;BR()&amp;&quot;X&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Letter Calc. 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Letter_Objectives_Calcul_2__c</fullName>
        <formula>IF( TEXT(Bonus_Criteria__c )=&quot;Student Numbers&quot;,&quot;&quot;,BR()&amp;&quot;% Personal Objectives Achieved (&quot;&amp; TEXT( Objectives_Target_Achieved__c*100)&amp;&quot;%)&quot; &amp;BR()&amp;&quot;X&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Letter Objectives Calcul 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Letter_Personal_Objectives_Calcul__c</fullName>
        <formula>BR()&amp;&quot;% Student Target Achieved (&quot;&amp;TEXT( Student_Target_Achieved__c*100)&amp;&quot;%&quot; &amp;&quot;)&quot;&amp;BR()&amp;&quot;=&quot;&amp;BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Letter Personal Objectives Calcul.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Letter_Result_Bonus__c</fullName>
        <formula>Perfomance_Bonus_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Letter Result Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Letter_Text_Bursaries__c</fullName>
        <formula>IF( TEXT(Target_Students_This_Year__r.Bursaries__c )=&quot;Included in Bonus Calculation&quot;,&quot;&quot;,&quot; The bonus calculation shall exclude students with bursaries, according to the % discount provided (For example: A student on 50% bursary shall only count as 0.5 towards your bonus calculation). &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Letter Text Bursaries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Letter_Text_Year_Groups__c</fullName>
        <formula>IF( TEXT(Target_Students_This_Year__r.School_Section__c )=&quot;Whole School&quot;,&quot;&quot;, &quot;Your bonus, and student numbers shown in the table, focuses on the number of students recruited for the following Year Groups: &quot;&amp;  Target_Students_This_Year__r.Specify_Year_Groups__c  )&amp;&quot;. &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Letter Text Year Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Letter_Text_addition_Objectives__c</fullName>
        <formula>IF(  TEXT(Bonus_Criteria__c)=&quot;Student Numbers&quot; ,&quot;&quot;,&quot;Please remember that your final bonus is based on student numbers and successfully achieving your personal objectives for the year set out by your Line Manager. At the end of the year, your Line Manager will determine the % of Personal Objectives you have achieved/fulfilled, and this shall also act as a multiplier in the same way as the Student Number objectives outlined above.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Letter Text addition Objectives</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bursaries__c</fullName>
        <label>Bursaries*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Children_Health_Insurance__c</fullName>
        <label>Children Health Insurance*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Staff_Member__r.Owner.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Record_Type__c</fullName>
        <description>Defines the correct record type to be used when cloning an existing agreement using the custom clone button</description>
        <formula>IF(OR(RecordType.DeveloperName = &quot;Employee_Agreement_LOCKED&quot;, RecordType.DeveloperName = &quot;Employee_Agreement_UNLOCKED&quot;), &quot;0126F000001hVzs&quot;, 

IF(OR(RecordType.DeveloperName = &quot;Employment_Agreement_LOCKED_PRIVATE&quot;, RecordType.DeveloperName = &quot;Employment_Agreement_UNLOCKED_PRIVATE&quot;), &quot;0126F000001hVzu&quot;,

IF(RecordType.DeveloperName = &quot;GROUP_LEVEL&quot;, &quot;0126F000001hVzv&quot;, &quot;&quot;

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cloned Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Bonus_Label__c</fullName>
        <formula>IF(Performance_Bonus__c &lt;&gt; 0, &quot;Performance Bonus:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Bonus Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Bursaries_Label__c</fullName>
        <formula>IF(AND(TEXT(Bursaries__c) &lt;&gt; &quot;0&quot;, TEXT(Bursaries__c) &lt;&gt; &quot;&quot;), &quot;Bursaries:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Bursaries Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <formula>IF(TEXT(Termination_Date__c)&lt;&gt;&quot;&quot;, Termination_Date__c, End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Full_Text_Benefits__c</fullName>
        <description>Field pending deletion 08/02/2015 - Need to check contract merge templates to ensure this field is not being used. Note that previously it contained the contents of &apos;Contract_Text_Housing__c&apos;, &apos;Contract_Text_Relocation__c&apos; and &apos;Other_Benefits__c&apos;, on separate lines, when the relevant field was not equal to BLANK.</description>
        <formula>IF( Other_Benefits__c  &lt;&gt; &quot;&quot;,Other_Benefits__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Full Text Benefits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Health_Label__c</fullName>
        <formula>IF(AND(TEXT(Health_Insurance__c) &lt;&gt; &quot;None&quot;, TEXT(Health_Insurance__c) &lt;&gt; &quot;&quot;), &quot;Health Insurance:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Health Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Housing_Label__c</fullName>
        <formula>IF(Cost_of_Housing__c &lt;&gt; 0, &quot;Housing Allowance:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Housing Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Other_Benefits_Label__c</fullName>
        <formula>IF(Other_Benefits__c &lt;&gt; &quot;&quot;, &quot;Other Benefits:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Other Benefits Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Relocation_Label__c</fullName>
        <formula>IF(Cost_of_Relocation__c &lt;&gt; 0, &quot;Relocation Allowance:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Relocation Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Retention_Bonus_Label__c</fullName>
        <formula>IF(Retention_Bonus__c &lt;&gt; 0, &quot;Retention Bonus:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Retention Bonus Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Salary_Label__c</fullName>
        <formula>IF(Salary__c &lt;&gt; 0, &quot;Salary:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Salary Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Less than a year</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                    <default>true</default>
                    <label>1 Year</label>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>Indefinite</fullName>
                </value>
                <value>
                    <fullName>Revolving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Tex_Start_Date__c</fullName>
        <formula>TEXT(DAY( Start_Date__c )) + &quot;/&quot; + 
TEXT(MONTH( Start_Date__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Start_Date__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Tex Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Additional_Clauses__c</fullName>
        <label>Contract Text Additional Clauses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Agreement_Date__c</fullName>
        <formula>TEXT(DAY( DATEVALUE(CreatedDate))) + &quot;/&quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate) )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Agreement Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Allowances_11_4__c</fullName>
        <formula>IF(  Cost_of_Housing_New__c !=0, 
 IF( Cost_of_Travel_Allowance_New__c !=0, &quot;11.4&quot;, &quot;11.3&quot;
),
  IF( Cost_of_Travel_Allowance_New__c !=0, &quot;11.3&quot;, &quot;11.2&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Allowances 11.4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Bonus__c</fullName>
        <formula>IF( Performance_Bonus_New__c &gt;0, &quot;Bonus of up to &quot; &amp; Copy_Bonus_Seperator__c &amp; &quot; &quot; &amp; Performance_Bonus_Currency__c &amp;&quot; &quot;&amp; Bonus_Gross_Net__c &amp; &quot; based on objectives agreed with the school, to be paid on the End Date of this agreement.&quot;&amp;BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Bonus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Bursaries__c</fullName>
        <formula>IF ( TEXT( Bursaries__c  )=&quot;&quot;,&quot;&quot;,IF ( TEXT(Bursaries__c )= &quot;0&quot;,&quot;&quot;,IF ( TEXT(Bursaries__c )= &quot;1&quot;,&quot;A Bursary for 1 child of the Employee at the school of employment covering enrolment and tuition fees.&quot;, &quot;A Bursary for &quot; &amp; TEXT( Bursaries__c)&amp; &quot; children of the Employee at the school of employment covering enrolment and tuition fees.&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Bursaries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Days_of_Work__c</fullName>
        <formula>IF(TEXT(Staff_Member__r.Position__c) = &quot;Headteacher&quot;, 210, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Days of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Text_End_Date__c</fullName>
        <formula>TEXT(DAY( End_Date__c )) + &quot;/&quot; + 
TEXT(MONTH(End_Date__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(End_Date__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Health__c</fullName>
        <formula>IF(TEXT(Health_Insurance__c)=&quot;None&quot;,&quot;&quot;, 

IF(AND(TEXT(Partner_Health_Insurance__c)=&quot;YES&quot;, TEXT(Children_Health_Insurance__c)=&quot;&quot;), &quot;Health Insurance for Employee and designated partner, in accordance with School Policy.&quot;&amp;BR(),

IF(AND(TEXT(Partner_Health_Insurance__c)=&quot;YES&quot;, TEXT(Children_Health_Insurance__c)=&quot;1&quot;), &quot;Health Insurance for Employee, designated partner and 1 child, in accordance with School Policy.&quot;&amp;BR(),

IF(AND(TEXT(Partner_Health_Insurance__c)=&quot;YES&quot;, TEXT(Children_Health_Insurance__c)&lt;&gt;&quot;&quot;, TEXT(Children_Health_Insurance__c )&lt;&gt;&quot;1&quot;), &quot;Health Insurance for Employee, designated partner and &quot; &amp; TEXT(Children_Health_Insurance__c)&amp;&quot; Children, in accordance with School Policy.&quot;&amp;BR(),

IF(AND(TEXT(Partner_Health_Insurance__c)=&quot;&quot;, TEXT(Children_Health_Insurance__c)=&quot;&quot;), &quot;Health Insurance, in accordance with School Policy.&quot;&amp;BR(),

IF(AND(TEXT(Partner_Health_Insurance__c)=&quot;&quot;, TEXT(Children_Health_Insurance__c)=&quot;1&quot;), &quot;Health Insurance for Employee and 1 child, in accordance with School Policy.&quot;&amp;BR(),

IF(AND(TEXT(Partner_Health_Insurance__c)=&quot;&quot;, TEXT(Children_Health_Insurance__c)&lt;&gt;&quot;&quot;, TEXT(Children_Health_Insurance__c )&lt;&gt;&quot;1&quot;), &quot;Health Insurance for Employee and &quot; &amp; TEXT(Children_Health_Insurance__c)&amp;&quot; Children, in accordance with School Policy.&quot;&amp;BR(), 

&quot;ERROR&quot;&amp;BR())))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Holidays__c</fullName>
        <formula>IF(TEXT(Staff_Member__r.School_Department__c) =&quot;Academic&quot;,

&quot;In addition to government approved public holidays in &quot;&amp;Country_of_the_regulating_law__c&amp;&quot;, you are entitled to the School Holidays during the academic year as detailed in the School Calendar, both subject to confirmation by the Head of School. If the term of this Agreement is less than an academic year, then the number of days holiday will be calculated on a pro-rata basis. You must seek approval for your Holidays and will normally not be allowed to take days off during school peak work periods (ie start and end of the academic year) or while the School is in session. No over-time or time off in lieu will be given as compensation for working public holidays that fall during term time.&quot;, 

&quot;In addition to government approved public holidays, you are entitled to &quot;&amp; TEXT( Holidays_Admin_Support_Staff__c) &amp;&quot; &quot;&amp; TEXT(Holidays_Day_Type__c)&amp;&quot; holidays per academic year. If the term of this contract is less than an academic year, then the days holiday will be calculated on a pro-rata basis. You must seek approval for your holidays and will normally not be allowed to take days off during school peak work periods (ie start and end of the academic year) or while the school is in session.  No over-time or time off in lieu will be given as compensation for working public holidays that fall during term time.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Holidays</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Housing_Admin_11_3h__c</fullName>
        <formula>IF(  Cost_of_Housing_New__c !=0, 
 IF( Cost_of_Travel_Allowance_New__c !=0, &quot;11.3 Travel Allowance&quot;, &quot;&quot;
),
  IF( Cost_of_Travel_Allowance_New__c !=0, &quot;11.2 Travel Allowance&quot;, &quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Housing Admin 11.3h</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Housing_Admin_11_3p__c</fullName>
        <formula>IF(  Cost_of_Travel_Allowance_New__c  !=0, &quot;You will be provided travel allowance up to a maximum of RM &quot;&amp;TEXT( Cost_of_Travel_Allowance_New__c)&amp;&quot; per contractual year in accordance with the School Policy.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Housing Admin 11.3p</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Housing__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Cost_of_Housing__c)), Cost_of_Housing__c &lt;&gt; 0), &quot;Housing Allowance, in accordance with School Policy.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Housing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Probation_Condition_No__c</fullName>
        <formula>IF( AND(TEXT( Months_Probation__c ) != &quot;One Month&quot;, TEXT( Months_Probation__c ) != &quot;Two Months&quot;, TEXT( Months_Probation__c ) != &quot;Three Months&quot;, TEXT( Months_Probation__c ) != &quot;Four Months&quot;, TEXT( Months_Probation__c ) != &quot;Five Months&quot;, TEXT( Months_Probation__c ) != &quot;Six Months&quot;),

&quot;4.1 No Probationary Period shall apply.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Probation Condition No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Probation_Condition_Yes_p1__c</fullName>
        <formula>IF( OR(TEXT( Months_Probation__c ) = &quot;One Month&quot;, TEXT( Months_Probation__c ) = &quot;Two Months&quot;, TEXT( Months_Probation__c ) = &quot;Three Months&quot;, TEXT( Months_Probation__c ) = &quot;Four Months&quot;, TEXT( Months_Probation__c ) = &quot;Five Months&quot;, TEXT( Months_Probation__c ) = &quot;Six Months&quot;),

&quot;4.1 You shall serve an initial probationary period of three (3) months from the date of your commencement of employment with the School.&quot;,

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Probation Condition Yes p1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Probation_Condition_Yes_p2__c</fullName>
        <formula>IF( OR(TEXT( Months_Probation__c ) = &quot;One Month&quot;, TEXT( Months_Probation__c ) = &quot;Two Months&quot;, TEXT( Months_Probation__c ) = &quot;Three Months&quot;, TEXT( Months_Probation__c ) = &quot;Four Months&quot;, TEXT( Months_Probation__c ) = &quot;Five Months&quot;, TEXT( Months_Probation__c ) = &quot;Six Months&quot;),

&quot;4.2 The School may, at its sole discretion, extend your initial probationary period, for a period not exceeding three (3) months. In the event of any extension, you shall be informed in writing of the extended probationary period.&quot;,

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Probation Condition Yes p2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Probation_Condition_Yes_p3__c</fullName>
        <formula>IF( OR(TEXT( Months_Probation__c ) = &quot;One Month&quot;, TEXT( Months_Probation__c ) = &quot;Two Months&quot;, TEXT( Months_Probation__c ) = &quot;Three Months&quot;, TEXT( Months_Probation__c ) = &quot;Four Months&quot;, TEXT( Months_Probation__c ) = &quot;Five Months&quot;, TEXT( Months_Probation__c ) = &quot;Six Months&quot;),

&quot;4.3 On completion of the initial probationary period or any extended period, the School shall inform you in writing of your confirmation in employment or termination.&quot;,

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Probation Condition Yes p3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Probation_Renumeration_7_1__c</fullName>
        <formula>IF( 
Monthly_Salary_During_Probation_New__c = 0,
&quot;7.1 Your gross salary shall be RM &quot;&amp;TEXT(Monthly_Salary_12_Months__c)&amp;&quot; only per month for the duration of the Period of Employment (or Handing-over Period).&quot;,

&quot;7.1 Your gross salary shall be RM&quot;&amp;TEXT(Monthly_Salary_During_Probation_New__c)&amp;&quot; only per month for the initial duration of 3 (three) months of the probation period.&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Probation Renumeration 7.1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Probation_Renumeration_7_2__c</fullName>
        <formula>IF( 
Monthly_Salary_During_Probation_New__c = 0,
&quot;7.2 Any salary increment for the duration of the Period of Employment (or Handing-over Period) shall be at the sole discretion of the School.&quot;,
&quot;7.2 Your gross salary may increase to RM&quot;&amp;TEXT(Monthly_Salary_after_Probation__c) &amp;&quot; only per month after a successful completion of 3 (three) months of the probation period. This increment shall be valid and effective only upon written notice from the School. The School may defer this salary increment at its sole discretion.&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Probation Renumeration 7.2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Probation_Salary__c</fullName>
        <formula>IF(Monthly_Salary_During_Probation__c = 0, &quot;&quot;, &quot;During the Employee&apos;s probation period the monthly salary shall be&quot;&amp;&quot; &quot;&amp;  Copy_Probation_Salary_Seperator__c &amp; &quot; &quot; &amp; Salary_Currency__c &amp; &quot; &quot; &amp; Gross_Net__c&amp;&quot;.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Probation Salary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Relocation__c</fullName>
        <formula>IF(Cost_of_Relocation__c &lt;&gt; 0, Copy_Relocation_Seperator__c &amp;&quot; &quot;&amp; Relocation_Allowance_Currency__c &amp;&quot; &quot;&amp; Relocation_Allowance_Gross_Net__c &amp;&quot; Relocation Allowance, in accordance with School Policy.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Relocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Retention_Bonus__c</fullName>
        <formula>IF( Retention_Bonus__c &gt;0, &quot;A Retention Bonus of &quot; &amp; Copy_Retention_Bonus_Seperator__c &amp;&quot; &quot;&amp; Retention_Bonus_Currency__c &amp; &quot; &quot; &amp; Retention_Bonus_Gross_Net__c &amp; &quot; in accordance with School Policy.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Retention Bonus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Salary__c</fullName>
        <formula>IF(Salary_New__c &lt;&gt; 0, Copy_Salary_Seperator__c &amp; &quot; &quot; &amp; Salary_Currency__c &amp; &quot; &quot; &amp; Gross_Net__c &amp; BR(), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Salary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Today__c</fullName>
        <formula>TEXT(DAY( Today__c )) + &quot;/&quot; + 
TEXT(MONTH( Today__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Today__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Travel_Admin_11_2h__c</fullName>
        <formula>IF( Cost_of_Housing_New__c !=0, &quot;11.2 Housing Allowance&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Travel Admin 11.2h</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Travel_Admin_11_2p__c</fullName>
        <formula>IF( Cost_of_Housing_New__c !=0, &quot;You will be provided housing allowance up to a maximum of RM &quot;&amp;TEXT(Cost_of_Housing_New__c)&amp;&quot; per contractual year in accordance with the School Policy.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Travel Admin 11.2p</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Travel_Allowance__c</fullName>
        <formula>IF(OR(ISBLANK(Cost_of_Travel_Allowance_New__c), Cost_of_Travel_Allowance_New__c = 0), &quot;&quot;,

&quot;Travel Allowance, in accordance with School Policy.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Travel Allowance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Visa_Cost__c</fullName>
        <formula>IF(OR(Visa_Costs_Amount_New__c = 0, ISBLANK(Visa_Costs_Amount_New__c)), &quot;&quot;, 

IF(TEXT(Travelling_Dependants__c) = &quot;&quot;, &quot;Visa procedural and legal fees, in accordance with School Policy.&quot;, &quot;Visa procedural and legal fees (including &quot;&amp;TEXT( Travelling_Dependants__c)&amp;&quot;), in accordance with School Policy.&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Visa Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Working_Hours_6_1__c</fullName>
        <formula>IF(
OR(
    AND(
    TEXT(Staff_Member__r.School_Department__c) = &quot;Administration&quot;,  TEXT(Staff_Member__r.Position__c) = &quot;Facilities Manager&quot;
    ),
    AND(
    TEXT(Staff_Member__r.School_Department__c) = &quot;Administration&quot;,  TEXT(Staff_Member__r.Position__c) = &quot;Other&quot;, CONTAINS(Staff_Member__r.Other_Responsabilities__c, &quot;Facilities&quot;)
    )
   ),
&quot;6.1 Your shall work for the School 48 hours per day for five days per week.&quot;,
&quot;6.1 Your shall work for the School 43.5 hours per day for five days per week.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Working Hours 6.1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Travel_Label__c</fullName>
        <formula>IF(Cost_of_Travel_Allowance__c &lt;&gt; 0, &quot;Travel Allowance:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Travel Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Visa_Cost_Label__c</fullName>
        <formula>IF(Visa_Costs_Amount__c &lt;&gt; 0, &quot;Visa Costs:&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Visa Cost Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Academic_Year__c</fullName>
        <formula>Target_Students_This_Year__r.Academic_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Criteria_Date__c</fullName>
        <formula>Target_Students_This_Year__r.Copy_Criteria_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus Criteria Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Date_Payable__c</fullName>
        <formula>Target_Students_This_Year__r.Copy_Pay_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus Date Payable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Seperator__c</fullName>
        <formula>IF( 
Performance_Bonus_New__c&gt;= 1000000, 
TEXT(FLOOR(Performance_Bonus_New__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Performance_Bonus_New__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Performance_Bonus_New__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Performance_Bonus_New__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Special_Criteria__c</fullName>
        <formula>Target_Students_This_Year__r.Special_Criteria_or_Conditions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus Special Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Student_Numbers_Text__c</fullName>
        <formula>Target_Students_This_Year__r.Text_Student_Num_Column__c &amp; Target_Students_This_Year__r.Text_Student_Num_Column_110__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus Student Numbers Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Text__c</fullName>
        <formula>Target_Students_This_Year__r.Text_percentage_Column_less110__c &amp; Target_Students_This_Year__r.Text_Column_more110__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus % Text</label>
        <type>Text</type>
    </fields>
</CustomObject>